--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
             <div class="container">
                 <div class="hero-content">
                     <div class="hero-text-content">
-                        <h1 class="hero-title">Shaik Samdan</h1>
-                        <p class="hero-tagline">I Craft Intelligent data insights for the businesses</p>
+                        <h1 class="hero-title">Samdan Shaik</h1>
+                        <p class="hero-tagline">I Craft Intelligent Software Solutions for the businesses</p>
                     </div>
                     <div class="hero-image-container">
                         <img src="assets/images/professional.png" alt="Shaik Samdan" class="hero-image">
@@ -193,10 +193,10 @@
             <div class="container">
                 <div class="intro-content">
                     <p class="intro-text">
-                        Hi <span class="emoji-wave">👋</span>! I'm an entry level software engineer. Passionate about
-                        <span class="highlight-badge highlight-green">learning emerging AI techniques</span>.
-                        I continuously evolve, crafting AI-powered automated solutions through
-                        <span class="highlight-badge highlight-purple">code, data, and innovation</span>.
+                        Hi <span class="emoji-wave">👋</span>! I'm an entry level software engineer Passionate 
+                        <span class="highlight-badge highlight-green">about technology</span>
+                        I continuously evolve, crafting scalable software solutions through
+                        <span class="highlight-badge highlight-purple">code, data, and innovation</span>
                     </p>
                 </div>
             </div>
@@ -215,7 +215,7 @@
                     <div class="about-section-content">
                         <div class="about-text-column">
                             <h2 class="about-section-title">About Me</h2>
-                            <p class="about-section-description">I'm a Junior software engineer in the making, Specialized in translating data into actionable insights.</p>
+                            <p class="about-section-description">I'm a Junior software engineer passionate about building technology that actually matters to real people.</p>
                         </div>
                         <div class="about-profile-card">
                             <img src="assets/images/professional.png" alt="Samdan Shaik" class="profile-card-image">
@@ -237,8 +237,8 @@
                 <div class="container">
                     <div class="about-section-content-single">
                         <h2 class="about-section-title">Experience</h2>
-                        <p class="about-section-text">I Previously worked as a software engineer, data at <a href="https://www.linkedin.com/company/aceengineer/" target="_blank" rel="noopener noreferrer" class="section-inline-link">AceEngineer, Inc.</a> Enforcing AI based solutions for clients using skills like Python, ML, DL, NLP and Data Visualization.</p>
-                        <p class="about-section-text">Also, I have a strong background in statistical analysis, predictive modeling, machine learning techniques, and deriving actionable insights from large datasets.</p>
+                        <p class="about-section-text">I Previously worked as a software engineer at <a href="https://www.linkedin.com/company/aceengineer/" target="_blank" rel="noopener noreferrer" class="section-inline-link">AceEngineer, Inc.</a> Enforcing efficient software solutions for clients using skills like Python, Git, REST APIs and Data Analysis.</p>
+                        <p class="about-section-text">Also, I have a strong background in python automation, statistical analysis and deriving actionable insights from large volumes of data.</p>
                     </div>
                 </div>
             </div>
@@ -248,7 +248,7 @@
                 <div class="container">
                     <div class="about-section-content-single">
                         <h2 class="about-section-title">Education</h2>
-                        <p class="about-section-text">Completed my Bachelors of Technology in Computer Science at Rajiv Gandhi University of Knowledge Technologies, Srikakulam (<a href="https://rguktsklm.ac.in/" target="_blank" rel="noopener noreferrer" class="section-inline-link">RGUKT Srikakulam</a>).</p>
+                        <p class="about-section-text">Completed my Bachelor's degree in Computer Science at Rajiv Gandhi University of Knowledge Technologies, Srikakulam (<a href="https://rguktsklm.ac.in/" target="_blank" rel="noopener noreferrer" class="section-inline-link">RGUKT Srikakulam</a>).</p>
                         <p class="about-section-text">  Qualified with a GPA of 7.45 / 10</p>
                     </div>
                 </div>
@@ -259,7 +259,7 @@
                 <div class="container">
                     <div class="about-section-content-single">
                         <h2 class="about-section-title">Interests</h2>
-                        <p class="about-section-text">I am interested in unfolding versatile software solutions and enjoys collaborating with diverse teams to bring ideas to life. Beyond coding, I regularly read blogs on AI Trends/Updates. In my free time, I enjoy interacting with new people, exploring innovative ideas and working on projects that excites me.</p>
+                        <p class="about-section-text">I am interested in unfolding versatile software solutions and enjoys collaborating with <i>diverse teams to bring ideas</i> to life. Beyond development, I regularly read blogs on AI Trends/Updates. In my free time, I enjoy interacting with new people, exploring innovative ideas and working on projects that excites me.</p>
                     </div>
                 </div>
             </div>
@@ -298,15 +298,12 @@
                     <div class="services-boxes-grid">
                         <div class="service-box">
                             <h3 class="service-box-title">Data-Driven Solutions</h3>
-                            <p class="service-box-description">Transform complex datasets into actionable business insights through advanced analytics and visualization</p>
+                            <p class="service-box-description">Bridging the gap between data and decision-making by uncovering the patterns and trends buried in complex datasets</p>
                         </div>
                         <div class="service-box">
-                            <h3 class="service-box-title">AI-Powered Systems</h3>
-                            <p class="service-box-description">Build intelligent solutions using cutting-edge machine learning and deep learning technologies</p>
+                            <h3 class="service-box-title">Software Automation</h3>
+                            <p class="service-box-description">Building automation pipelines that transform chaotic development workflows into smooth, repeatable processes</p>
                         </div>
-                        <div class="service-box">
-                            <h3 class="service-box-title">Predictive Analytics</h3>
-                            <p class="service-box-description">Create automated workflows and predictive models that drive business decision-making</p>
                         </div>
                     </div>
                 </div>
@@ -320,22 +317,8 @@
                     <div class="skills-categories">
                         <!-- Category 1: Data Science & AI -->
                         <div class="skills-category">
-                            <h3 class="category-title">Data Science & AI</h3>
+                            <h3 class="category-title">Data Analytics & AI</h3>
                             <div class="skills-icon-grid">
-                                <div class="skill-item">
-                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/scikitlearn/scikitlearn-original.svg" alt="Scikit-learn" class="skill-icon-img">
-                                    <span class="skill-name">Scikit-learn</span>
-                                </div>
-                                <div class="skill-item">
-                                    <svg class="skill-icon-img" viewBox="0 0 24 24" fill="currentColor">
-                                        <path d="M12 0C5.373 0 0 5.373 0 12s5.373 12 12 12 12-5.373 12-12S18.627 0 12 0zm4.5 7.5l-3 6h-3l-3-6h3l1.5 3 1.5-3h3zm-4.5 9a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/>
-                                    </svg>
-                                    <span class="skill-name">XGBoost</span>
-                                </div>
-                                <div class="skill-item">
-                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pytorch/pytorch-original.svg" alt="PyTorch" class="skill-icon-img">
-                                    <span class="skill-name">PyTorch</span>
-                                </div>
                                 <div class="skill-item">
                                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/numpy/numpy-original.svg" alt="NumPy" class="skill-icon-img">
                                     <span class="skill-name">NumPy</span>
@@ -402,10 +385,6 @@
                                 <div class="skill-item">
                                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/fastapi/fastapi-original.svg" alt="FastAPI" class="skill-icon-img">
                                     <span class="skill-name">FastAPI</span>
-                                </div>
-                                <div class="skill-item">
-                                    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/streamlit/streamlit-original.svg" alt="Streamlit" class="skill-icon-img">
-                                    <span class="skill-name">Streamlit</span>
                                 </div>
                                 <div class="skill-item">
                                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" class="skill-icon-img">
