Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -438,24 +438,10 @@
                 <h2 class="section-title">Featured Work</h2>
 
                 <div class="projects-list">
-                    <!-- Project 1: Ecom-Sales Predictor -->
+                    <!-- Project 1: Oil & Gas Data Analysis -->
                     <div class="project-item">
                         <div class="project-image-column">
-                            <img src="assets/images/ecom-pred.png" alt="Ecom-Sales Predictor" class="project-overview-image">
-                        </div>
-                        <div class="project-details-column">
-                            <h3 class="project-item-title">Ecom-Sales Predictor</h3>
-                            <p class="project-item-summary">A sequential ML pipeline to predict product success using sales data.</p>
-                            <a href="#project-ecom" class="project-view-link">View Project</a>
-                        </div>
-                    </div>
-
-                    <hr class="project-divider">
-
-                    <!-- Project 2: Oil & Gas Data Analysis -->
-                    <div class="project-item">
-                        <div class="project-image-column">
-                            <img src="assets/images/oil-gas-new.png" alt="Oil & Gas Data Analysis" class="project-overview-image">
+                            <img src="assets/images/oil-gas-new.jpg" alt="Oil & Gas Data Analysis" class="project-overview-image">
                         </div>
                         <div class="project-details-column">
                             <h3 class="project-item-title">Oil & Gas Data Analysis</h3>
@@ -463,51 +449,34 @@
                             <a href="#project-oil-gas" class="project-view-link">View Project</a>
                         </div>
                     </div>
-                </div>
-            </div>
-        </section>
 
-        <!-- Project Detail: Ecom-Sales Predictor -->
-        <section id="project-ecom" class="project-detail section view">
-            <div class="container">
-                <nav class="breadcrumb breadcrumb-dark" aria-label="Breadcrumb">
-                    <a href="#home" class="breadcrumb-link">Home</a>
-                    <span class="breadcrumb-separator">></span>
-                    <a href="#projects" class="breadcrumb-link">Portfolio</a>
-                    <span class="breadcrumb-separator">></span>
-                    <span class="breadcrumb-current">Ecom-Sales Predictor</span>
-                </nav>
-                <h1 class="project-detail-title">Ecom-Sales Predictor</h1>
-                <a href="https://github.com/samdansk2/ecom-predict" target="_blank" rel="noopener noreferrer" class="project-code-link">View Code</a>
+                    <hr class="project-divider">
 
-                <div class="project-detail-image-wrapper">
-                    <img src="assets/images/ecom-pred.png" alt="Ecom-Sales Predictor" class="project-detail-image">
-                </div>
-
-                <div class="project-tech-stack">
-                    <h2 class="project-section-heading">Tech Stack</h2>
-                    <div class="tech-stack-grid">
-                        <div class="tech-item">Python</div>
-                        <div class="tech-item">Scikit-learn</div>
-                        <div class="tech-item">Pandas</div>
-                        <div class="tech-item">NumPy</div>
-                        <div class="tech-item">Machine Learning</div>
-                        <div class="tech-item">Data Analysis</div>
+                    <!-- Project 2: Open Source Contributions -->
+                    <div class="project-item">
+                        <div class="project-image-column">
+                            <img src="assets/images/open_source.jpg" alt="Open Source Contributions" class="project-overview-image">
+                        </div>
+                        <div class="project-details-column">
+                            <h3 class="project-item-title">Open Source Contributions</h3>
+                            <p class="project-item-summary">Engaging with the developer community through code reviews, bug fixes, and feature development.</p>
+                            <a href="#project-open-source" class="project-view-link">View Project</a>
+                        </div>
                     </div>
-                    <hr class="tech-stack-separator">
-                    <div class="project-description">
-                        <p>An advanced e-commerce sales prediction system that leverages machine learning to predict product sales outcome, forecast sales trends, analyze customer behavior, and provide actionable insights. The system combines traditional ML models with deep learning approaches and includes a backend FastAPI, comprehensive Streamlit dashboard for real-time analysis and predictions.</p>
-                    </div>
-                </div>
 
-                <div class="project-features">
-                    <h2 class="project-section-heading">Key Features</h2>
-                    <ul class="features-list">
-                        <li>Advanced ML Pipeline: Multi-model ensemble with XGBoost, LightGBM, and Neural Networks</li>
-                        <li>Interactive Dashboard: Real-time Streamlit interface for sales analysis and predictions</li>
-                        <li>Ensemble Learning: Meta-learning approach combining multiple models for superior accuracy</li>
-                        <li>API Service: FastAPI endpoints for programmatic access to predictions</li>
-                    </ul>
+                    <hr class="project-divider">
+
+                    <!-- Project 3: Ecom-Sales Forecast -->
+                    <div class="project-item">
+                        <div class="project-image-column">
+                            <img src="assets/images/ecom-pred.png" alt="Ecom-Sales Forecast" class="project-overview-image">
+                        </div>
+                        <div class="project-details-column">
+                            <h3 class="project-item-title">Ecom-Sales Forecast</h3>
+                            <p class="project-item-summary">A sequential data analytics pipeline to estimate product success using historical sales data.</p>
+                            <a href="#project-ecom" class="project-view-link">View Project</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -526,7 +495,7 @@
                 <a href="https://github.com/vamseeachanta/worldenergydata" target="_blank" rel="noopener noreferrer" class="project-code-link">View Code</a>
 
                 <div class="project-detail-image-wrapper">
-                    <img src="assets/images/oil-gas-new.png" alt="Oil & Gas Data Analysis" class="project-detail-image">
+                    <img src="assets/images/oil-gas-new.jpg" alt="Oil & Gas Data Analysis" class="project-detail-image">
                 </div>
 
                 <div class="project-tech-stack">
@@ -546,13 +515,93 @@
                 </div>
 
                 <div class="project-features">
-                    <h2 class="project-section-heading">Key Features</h2>
+                    <h2 class="project-section-heading">Quick Look</h2>
                     <ul class="features-list">
-                        <li>Comprehensive analysis of BSEE datasets</li>
-                        <li>Improved data extraction using Scrapy</li>
+                        <li>Comprehensive analysis of well & production data</li>
                         <li>Compelling data visualizations for insights</li>
                         <li>Industry-specific analytics and reporting</li>
                         <li>Automated data collection workflows</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Project Detail: Open Source Contributions -->
+        <section id="project-open-source" class="project-detail section view">
+            <div class="container">
+                <nav class="breadcrumb breadcrumb-dark" aria-label="Breadcrumb">
+                    <a href="#home" class="breadcrumb-link">Home</a>
+                    <span class="breadcrumb-separator">></span>
+                    <a href="#projects" class="breadcrumb-link">Portfolio</a>
+                    <span class="breadcrumb-separator">></span>
+                    <span class="breadcrumb-current">Open Source Contributions</span>
+                </nav>
+                <h1 class="project-detail-title">Open Source Contributions</h1>
+
+                <div class="project-detail-image-wrapper">
+                    <img src="assets/images/open_source.jpg" alt="Open Source Contributions" class="project-detail-image">
+                </div>
+
+                <div class="project-tech-stack">
+                    <h2 class="project-section-heading">Tech Stack</h2>
+                    <div class="tech-stack-grid">
+                        <div class="tech-item">Python</div>
+                        <div class="tech-item">Git</div>
+                        <div class="tech-item">REST APIs</div>
+                        <div class="tech-item">Debugging</div>
+                    </div>
+                    <hr class="tech-stack-separator">
+                </div>
+
+                <div class="project-features">
+                    <h2 class="project-section-heading">Quick Look</h2>
+                    <ul class="features-list">
+                        <li>Open-source Python automation scripts for day-to-day utilities</li>
+                        <li>REST API integrations across 10+ web sources to automate data</li>
+                        <li>Technical documentation and unit and integration tests</li>
+                        <li>Debugging, review-ready pull requests, and code reviews</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Project Detail: Ecom-Sales Forecast -->
+        <section id="project-ecom" class="project-detail section view">
+            <div class="container">
+                <nav class="breadcrumb breadcrumb-dark" aria-label="Breadcrumb">
+                    <a href="#home" class="breadcrumb-link">Home</a>
+                    <span class="breadcrumb-separator">></span>
+                    <a href="#projects" class="breadcrumb-link">Portfolio</a>
+                    <span class="breadcrumb-separator">></span>
+                    <span class="breadcrumb-current">Ecom-Sales Forecast</span>
+                </nav>
+                <h1 class="project-detail-title">Ecom-Sales Forecast</h1>
+                <a href="https://github.com/samdansk2/ecom-predict" target="_blank" rel="noopener noreferrer" class="project-code-link">View Code</a>
+
+                <div class="project-detail-image-wrapper">
+                    <img src="assets/images/ecom-pred.png" alt="Ecom-Sales Forecast" class="project-detail-image">
+                </div>
+
+                <div class="project-tech-stack">
+                    <h2 class="project-section-heading">Tech Stack</h2>
+                    <div class="tech-stack-grid">
+                        <div class="tech-item">Python</div>
+                        <div class="tech-item">Scikit-learn</div>
+                        <div class="tech-item">Pandas</div>
+                        <div class="tech-item">Data Analysis</div>
+                    </div>
+                    <hr class="tech-stack-separator">
+                    <div class="project-description">
+                        <p>An e-commerce sales forecasting system that leverages data analytics to predict product sales outcome, forecast sales trends, analyze customer behavior, and provide actionable insights.</p>
+                    </div>
+                </div>
+
+                <div class="project-features">
+                    <h2 class="project-section-heading">Quick Look</h2>
+                    <ul class="features-list">
+                        <li>Data analysis, applying statistical techniques to identify trends, patterns.</li>
+                        <li>Comprehensive analytical datasets for reporting</li>
+                        <li>Sales performance, KPIs, and trends for real-time business monitoring</li>
                     </ul>
                 </div>
             </div>
@@ -613,9 +662,9 @@
             <div class="footer-content">
                 <p class="footer-copyright">&copy; 2025 Shaik Samdan. All rights reserved.</p>
                 <div class="footer-links">
-                    <a href="mailto:ace.samdan@gmail.com" class="footer-link">ace.samdan@gmail.com</a>
-                    <a href="https://linkedin.com/in/samdanshaik" target="_blank" rel="noopener noreferrer" class="footer-link">LinkedIn</a>
-                    <a href="https://github.com/samdansk2" target="_blank" rel="noopener noreferrer" class="footer-link">GitHub</a>
+                    <a href="mailto:ace.samdan@gmail.com" class="footer-link">ace.samdan@gmail.com 📧</a>
+                    <a href="https://linkedin.com/in/samdanshaik" target="_blank" rel="noopener noreferrer" class="footer-link">LinkedIn 🌐</a>
+                    <a href="https://github.com/samdansk2" target="_blank" rel="noopener noreferrer" class="footer-link">GitHub 🧑‍💻</a>
                 </div>
             </div>
         </div>
