--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <div class="container">
                     <div class="about-section-content-single">
                         <h2 class="about-section-title">Experience</h2>
-                        <p class="about-section-text">I Previously worked as a software engineer at <a href="https://www.linkedin.com/company/aceengineer/" target="_blank" rel="noopener noreferrer" class="section-inline-link">AceEngineer, Inc.</a> Enforcing efficient software solutions for clients using skills like Python, Git, REST APIs and Data Analysis.</p>
+                        <p class="about-section-text">I Previously worked as a software engineer at <a href="https://www.aceengineer.com/" target="_blank" rel="noopener noreferrer" class="section-inline-link">AceEngineer, Inc.</a> Enforcing efficient software solutions for clients using skills like Python, Git, REST APIs and Data Analysis.</p>
                         <p class="about-section-text">Also, I have a strong background in python automation, statistical analysis and deriving actionable insights from large volumes of data.</p>
                     </div>
                 </div>
@@ -445,7 +445,7 @@
                         </div>
                         <div class="project-details-column">
                             <h3 class="project-item-title">Oil & Gas Data Analysis</h3>
-                            <p class="project-item-summary">Oil & Gas Data project analyzing BSEE datasets, creating visualizations and insights.</p>
+                            <p class="project-item-summary">Oil & Gas Data project analyzing offshore energy datasets, creating insights and reports.</p>
                             <a href="#project-oil-gas" class="project-view-link">View Project</a>
                         </div>
                     </div>
