--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Shaik Samdan - Data & AI Practitioner specializing in Machine Learning, Deep Learning, NLP, and Data Science. Explore my portfolio and projects.">
-    <meta name="keywords" content="Shaik Samdan, Data Scientist, AI Engineer, Machine Learning, Deep Learning, NLP, Data Analytics, Python, Portfolio">
-    <meta name="author" content="Shaik Samdan">
+    <meta name="description" content="Samdan Shaik - Software Engineer specializing in Python automation and Data Analysis. Explore my portfolio and projects.">
+    <meta name="keywords" content="Samdan Shaik, Software Engineer, Python, Automation, Data Analysis, Portfolio">
+    <meta name="author" content="Samdan Shaik">
 
     <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Shaik Samdan - Data & AI Practitioner Portfolio">
-    <meta property="og:description" content="Explore the portfolio of Shaik Samdan, a Data & AI Practitioner specializing in Machine Learning and Data Science.">
+    <meta property="og:title" content="Samdan Shaik - Software Engineer Portfolio">
+    <meta property="og:description" content="Portfolio of Samdan Shaik, Software Engineer specializing in Python automation and Data Analysis.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://samdansk2.github.io/portfolio/">
     <meta property="og:image" content="https://samdansk2.github.io/portfolio/assets/images/og-image.jpg">
 
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Shaik Samdan - Data & AI Practitioner Portfolio">
-    <meta name="twitter:description" content="Explore the portfolio of Shaik Samdan, a Data & AI Practitioner specializing in Machine Learning and Data Science.">
+    <meta name="twitter:title" content="Samdan Shaik - Software Engineer Portfolio">
+    <meta name="twitter:description" content="Portfolio of Samdan Shaik, Software Engineer specializing in Python automation and Data Analysis.">
 
-    <title>Shaik Samdan - Data & AI Practitioner Portfolio</title>
+    <title>Samdan Shaik - Software Engineer Portfolio</title>
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://samdansk2.github.io/portfolio/">
