--- a/index.html
+++ b/index.html
@@ -504,7 +504,6 @@
                         <div class="tech-item">Python</div>
                         <div class="tech-item">Scrapy</div>
                         <div class="tech-item">Data Visualization</div>
-                        <div class="tech-item">Analytics</div>
                         <div class="tech-item">Pandas</div>
                         <div class="tech-item">Matplotlib</div>
                     </div>
@@ -558,7 +557,7 @@
                     <ul class="features-list">
                         <li>Open-source Python automation scripts for day-to-day utilities</li>
                         <li>REST API integrations across 10+ web sources to automate data</li>
-                        <li>Technical documentation and unit and integration tests</li>
+                        <li>Technical documentation and unit, integration tests</li>
                         <li>Debugging, review-ready pull requests, and code reviews</li>
                     </ul>
                 </div>
