Add link to view code for Open Source Contributions section

--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
                     <span class="breadcrumb-current">Open Source Contributions</span>
                 </nav>
                 <h1 class="project-detail-title">Open Source Contributions</h1>
+                <a href="https://github.com/vamseeachanta/assetutilities" target="_blank" rel="noopener noreferrer" class="project-code-link">View Code</a>
 
                 <div class="project-detail-image-wrapper">
                     <img src="assets/images/open_source.jpg" alt="Open Source Contributions" class="project-detail-image">
